ide suggestions